Выполнение ФЗ9